# playground

./: LICENSE  README.md  pyproject.toml  setup.cfg
emily_funcy/: __init__.py  debug.py
src/: funcy.py
