[tool.poetry]
name = "emily_funcy"
version = "0.1.0"
description = ""
authors = ["Emily Edmondson <ecedmondson@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ecedmondson/playground"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
